xcrawl vibe coding WIP

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,12 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "themoviedb[full] (>=1.0.2,<2.0.0)"
+    "themoviedb[full] (>=1.0.2,<2.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
+package-mode = false
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
