--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "themoviedb[full] (>=1.0.2,<2.0.0)",
     "python-dotenv (>=1.1.0,<2.0.0)"
 ]
+packages = [{ include = "src" }]
 
 [tool.poetry]
 package-mode = false
